Fixing overflow of execution tree node with text wrapping (ZU-74)
Conflicts:
	step-controller/step-controller-server-webapp/src/main/resources/webapp/css/step.css

--- a/step-controller/step-controller-server-webapp/src/main/resources/webapp/css/step.css
+++ b/step-controller/step-controller-server-webapp/src/main/resources/webapp/css/step.css
@@ -600,3 +600,7 @@ table.executionTableResult td {
 	left : auto;
 	right: 0;
 }
+
+.text-wrapping {
+	overflow-wrap: break-word;
+}
